--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-models/
+src/models/
 img/
 
 # Snowpack dependency directory (https://snowpack.dev/)
