--- a/.gitignore
+++ b/.gitignore
@@ -47,9 +47,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-src/models/
+src/model/
 img/
-model/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
