--- a/package.json
+++ b/package.json
@@ -15,13 +15,22 @@
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
     "@parcel/config-default": "^2.9.2",
+    "@squoosh/lib": "^0.5.3",
     "@vxna/gltf-loader": "^2.0.1",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
     "dat.gui": "^0.7.9",
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
+    "image-minimizer-webpack-plugin": "^3.8.3",
+    "image-webpack-loader": "^8.1.0",
+    "imagemin": "^8.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^10.0.1",
     "mini-css-extract-plugin": "^2.7.6",
     "parcel": "^2.9.2",
     "parcel-reporter-static-files-copy": "^1.5.0",
@@ -29,7 +38,10 @@
     "postcss-loader": "^7.3.2",
     "postcss-preset-env": "^8.4.1",
     "prettier": "^3.0.0",
+    "sharp": "^0.32.6",
     "style-loader": "^3.3.3",
+    "svgo": "^3.0.3",
+    "terser-webpack-plugin": "^5.3.9",
     "vite": "^4.3.5",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
