--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "style-loader": "^3.3.3",
     "svgo": "^3.0.3",
     "terser-webpack-plugin": "^5.3.9",
+    "url-loader": "^4.1.1",
     "vite": "^4.3.5",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
