добавлены шрифты + исправлены баги при клике на кнопки и слайдер в моделе

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "dependencies": {
     "aframe": "^1.4.2",
     "aframe-animation-component": "^5.1.2",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.20",
     "browserslist": "^4.21.10",
+    "cssnano": "^7.0.5",
     "gsap": "^3.11.5",
     "normalize.css": "^8.0.1",
     "r3f-perf": "^7.1.2",
@@ -35,7 +36,7 @@
     "parcel": "^2.9.2",
     "parcel-reporter-static-files-copy": "^1.5.0",
     "postcss": "^8.4.24",
-    "postcss-loader": "^7.3.2",
+    "postcss-loader": "^7.3.4",
     "postcss-preset-env": "^8.4.1",
     "prettier": "^3.0.0",
     "sharp": "^0.32.6",
